--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
   "author": "Oberemko Viktor",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.16.0",
     "browser-sync": "^2.13.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.3.2",
-    "gulps": "^0.1.4"
+    "gulp-sourcemaps": "^1.6.0",
+    "gulps": "^0.1.4",
+    "through2": "^2.0.1"
   }
 }
