--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "start": "webpack-dev-server --open, webpack --watch"
   },
   "author": "Oberemko Viktor",
   "license": "ISC",
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
     "browser-sync": "^2.13.0",
+    "express": "^4.14.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^2.4.0",
     "gulps": "^0.1.4",
-    "through2": "^2.0.3"
+    "through2": "^2.0.3",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-server": "^1.16.3"
   }
 }
