--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Oberemko Viktor",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "browser-sync": "^2.13.0",
     "express": "^4.14.1",
