--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "browser-sync": "^2.13.0",
+    "css-loader": "^0.26.1",
     "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.0",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^2.4.0",
     "gulps": "^0.1.4",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^4.1.1",
+    "scss-loader": "0.0.1",
+    "style-loader": "^0.13.1",
     "through2": "^2.0.3",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
